# LRVM

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
docs/: Architecture.md  Hardware.md  Tutorial.md
examples/: README.md
examples/async_hw/: Cargo.toml  README.md
examples/async_hw/src/: counter.rs  main.rs  source.lasm
examples/benchmark/: Cargo.toml  README.md
examples/benchmark/src/: main.rs  source.lasm
examples/brainfuck/: Cargo.toml  README.md
examples/brainfuck/src/: main.rs  source.lasm
examples/disassemble/: Cargo.toml  README.md
examples/disassemble/src/: main.rs  source.lasm  tests.rs
examples/elapsed_time/: Cargo.toml  README.md
examples/elapsed_time/src/: main.rs
examples/hello_world/: Cargo.toml  README.md
examples/hello_world/src/: display.lasm  main.rs
examples/hw_detect/: Cargo.toml  README.md
examples/hw_detect/src/: main.rs  source.lasm
examples/minimal/: Cargo.toml  README.md
examples/minimal/src/: main.rs
lrvm/: Cargo.toml  README.md
lrvm/src/: lib.rs
lrvm/src/board/: board.rs  bus.rs  hwb.rs  mod.rs
lrvm/src/cpu/: cpu.rs  mod.rs  regs.rs
lrvm/src/mem/: mem.rs  (+1 more)
lrvm_aux/: Cargo.toml  README.md
lrvm_aux/src/: lib.rs
lrvm_tools/: Cargo.toml  README.md
lrvm_tools/src/: lib.rs
mrvm/: Cargo.toml  README.md
mrvm/src/: lib.rs
mrvm_aux/: Cargo.toml  README.md
mrvm_aux/src/: lib.rs
mrvm_tools/: Cargo.toml  README.md
mrvm_tools/src/: lib.rs
vscode-lasm/: CHANGELOG.md  README.md  language-configuration.json  package.json
vscode-lasm/syntaxes/: lasm.md.json  lasm.tmLanguage.json
(+153 files in other folders)
