[workspace]
members = [
    "lrvm",
    "lrvm_aux",
    "lrvm_tools",
    "examples/minimal",
    "examples/hello_world",
    "examples/elapsed_time",
    "examples/hw_detect",
    "examples/async_hw",
    "examples/disassemble",
    "examples/brainfuck",
    "examples/benchmark"
]

[profile.release]
lto = true
